--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build-watch": "vue-cli-service  --env.NODE_ENV=development build-watch --mode development"
   },
   "dependencies": {
+    "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
@@ -27,6 +29,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-vue": "^8.0.3",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
-    "jest": "^27.0.5"
+    "jest": "^27.0.5",
+    "vue-cli-plugin-chrome-extension-cli": "~1.1.4"
   }
 }
