--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.8.3",
+    "element-plus": "^2.2.28",
+    "linkedom": "^0.14.21",
     "vue": "^3.2.13"
   },
   "devDependencies": {
