--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "copy-webpack-plugin": "^11.0.0",
-    "core-js": "^3.8.3",
+    "core-js": "^3.27.1",
     "element-plus": "^2.2.28",
     "linkedom": "^0.14.21",
     "vue": "^3.2.13"
@@ -32,6 +32,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
     "jest": "^27.0.5",
-    "vue-cli-plugin-chrome-extension-cli": "~1.1.4"
+    "vue-cli-plugin-chrome-extension-cli": "~1.1.4",
+    "vue-cli-plugin-windicss": "~1.1.6"
   }
 }
