--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "build-watch": "vue-cli-service  --env.NODE_ENV=development build-watch --mode development"
   },
   "dependencies": {
+    "@ant-design/icons-vue": "^6.1.0",
+    "ant-design-vue": "^3.2.15",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.27.1",
-    "element-plus": "^2.2.28",
     "linkedom": "^0.14.21",
     "vue": "^3.2.13"
   },
