--- a/src/manifest.development.json
+++ b/src/manifest.development.json
@@ -8,7 +8,8 @@
     "bookmarks",
     "history",
     "activeTab",
-    "tabs"
+    "tabs",
+    "storage"
   ],
   "oauth2": {
     "client_id": "117258413154-d9fc02lao5lq4dpem9gge28dvlcl518t.apps.googleusercontent.com",
