clean up + icons + build updates

--- a/src/manifest.development.json
+++ b/src/manifest.development.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
-  "name": "bookmarks",
-  "description": "chrome extension",
+  "name": "FavBox",
+  "description": "Browser bookmarks tool",
   "version": "0.0.1",
   "permissions": [
     "bookmarks",
@@ -13,6 +13,12 @@
   },
   "action": {
     "default_popup": "popup.html"
+  },
+  "icons": {
+    "16": "icon32.png",
+    "32": "icon32.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
   },
   "content_scripts": [
     {
