--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "core-js": "^3.27.1",
     "jsstore": "^4.5.0",
     "linkedom": "^0.14.21",
+    "v-lazy-image": "^2.1.1",
     "vue": "^3.2.13"
   },
   "devDependencies": {
