--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons-vue": "^6.1.0",
     "@headlessui/vue": "^1.7.7",
     "@heroicons/vue": "^2.0.13",
+    "@mozilla/readability": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "ant-design-vue": "^3.2.15",
     "copy-webpack-plugin": "^11.0.0",
