--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@ant-design/icons-vue": "^6.1.0",
     "@headlessui/vue": "^1.7.7",
     "@heroicons/vue": "^2.0.13",
-    "@mozilla/readability": "^0.4.2",
+    "@postlight/parser": "^2.2.3",
     "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "ant-design-vue": "^3.2.15",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.27.1",
     "jsstore": "^4.5.0",
     "linkedom": "^0.14.21",
+    "url": "^0.11.0",
     "v-lazy-image": "^2.1.1",
     "vue": "^3.2.13"
   },
