--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "linkedom": "^0.14.21",
     "url": "^0.11.0",
     "v-lazy-image": "^2.1.1",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-next-masonry": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
