--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@postlight/parser": "^2.2.3",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
+    "@vueuse/core": "^9.12.0",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.27.1",
     "jsstore": "^4.5.0",
     "linkedom": "^0.14.21",
+    "notiwind": "^2.0.0",
     "url": "^0.11.0",
     "v-lazy-image": "^2.1.1",
     "vue": "^3.2.13",
