--- a/src/manifest.production.json
+++ b/src/manifest.production.json
@@ -23,7 +23,8 @@
     "content_scripts": [
       {
         "matches": ["<all_urls>"],
-        "js": ["/content.js"]
+        "js": ["/content.js"],
+        "run_at": "document_end"
       }
     ]
   }
