--- a/src/manifest.production.json
+++ b/src/manifest.production.json
@@ -5,7 +5,6 @@
     "version": "0.0.1",
     "permissions": [
       "bookmarks",
-      "activeTab",
       "storage"
     ],
     "background": {
@@ -22,7 +21,7 @@
     },
     "content_scripts": [
       {
-        "matches": ["<all_urls>"],
+        "matches": ["https://*/*"],
         "js": ["/content.js"],
         "run_at": "document_end"
       }
