--- a/src/manifest.production.json
+++ b/src/manifest.production.json
@@ -1,31 +1,26 @@
 {
-    "manifest_version": 3,
-    "name": "FavBox",
-    "description": "Clear and modern bookmarking tool.",
-    "version": "0.0.1",
-    "permissions": [
-      "bookmarks",
-      "storage",
-      "activeTab"
-    ],
-    "background": {
-      "service_worker": "/sw.js"
-    },
-    "action": {
-      "default_popup": "popup.html"
-    },
-    "icons": {
-      "16": "icon32.png",
-      "32": "icon32.png",
-      "48": "icon48.png",
-      "128": "icon128.png"
-    },
-    "content_scripts": [
-      {
-        "matches": ["https://*/*"],
-        "js": ["/content.js"],
-        "run_at": "document_end"
-      }
-    ]
-  }
-  
+  "manifest_version": 3,
+  "name": "FavBox",
+  "description": "Clear and modern bookmarking tool.",
+  "version": "1.0.0",
+  "permissions": ["bookmarks", "activeTab", "storage"],
+  "background": {
+    "service_worker": "/sw.js"
+  },
+  "action": {
+    "default_popup": "popup.html"
+  },
+  "icons": {
+    "16": "icon32.png",
+    "32": "icon32.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://*/*"],
+      "js": ["/content.js"],
+      "run_at": "document_end"
+    }
+  ]
+}
