[feature] change the icon if the bookmark already exists

--- a/src/manifest.development.json
+++ b/src/manifest.development.json
@@ -3,7 +3,7 @@
   "name": "FavBox",
   "description": "Clear and modern bookmarking tool.",
   "version": "1.0.1",
-  "permissions": ["bookmarks", "activeTab", "storage"],
+  "permissions": ["bookmarks", "activeTab", "tabs", "storage"],
   "background": {
     "service_worker": "/sw.js"
   },
