--- a/package.json
+++ b/package.json
@@ -6,24 +6,24 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
-    "build-watch": "vue-cli-service  --env.NODE_ENV=development build-watch --mode development",
-    "zip": "npm-pack-zip"
+    "build-watch": "vue-cli-service  --env.NODE_ENV=development build-watch --mode development"
   },
   "dependencies": {
-    "@headlessui/vue": "^1.7.7",
-    "@heroicons/vue": "^2.0.13",
+    "@headlessui/vue": "^1.7.9",
+    "@heroicons/vue": "^2.0.15",
+    "@mozilla/readability": "^0.4.2",
     "@postlight/parser": "^2.2.3",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@vueuse/core": "^9.12.0",
     "copy-webpack-plugin": "^11.0.0",
-    "core-js": "^3.27.1",
+    "core-js": "^3.27.2",
     "jsstore": "^4.5.0",
     "linkedom": "^0.14.21",
     "notiwind": "^2.0.0",
     "url": "^0.11.0",
     "v-lazy-image": "^2.1.1",
-    "vue": "^3.2.13",
+    "vue": "^3.2.47",
     "vue-next-masonry": "^1.1.3"
   },
   "devDependencies": {
@@ -34,24 +34,23 @@
     "@vue/cli-plugin-unit-jest": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-airbnb": "^6.0.0",
-    "@vue/test-utils": "^2.2.7",
+    "@vue/test-utils": "^2.2.10",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
     "autoprefixer": "^10.4.13",
     "babel-jest": "^27.0.6",
     "babel-plugin-transform-remove-console": "^6.9.4",
-    "eslint": "^8.32.0",
+    "eslint": "^8.34.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-tailwindcss": "^3.8.0",
+    "eslint-plugin-tailwindcss": "^3.8.3",
     "eslint-plugin-vue": "^8.0.3",
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
     "jest": "^27.0.5",
-    "npm-pack-zip": "^1.3.0",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4",
+    "tailwindcss": "^3.2.6",
     "vue-cli-plugin-chrome-extension-cli": "~1.1.4"
   },
   "description": "## Project setup ``` npm install ```",
@@ -61,13 +60,16 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dd3v/bookmarks.git"
+    "url": "git+https://github.com/dd3v/favbox.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "chrome extension",
+    "bookmarks"
+  ],
+  "author": "Magalyas Dmitry",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/dd3v/bookmarks/issues"
+    "url": "https://github.com/dd3v/favbox/issues"
   },
-  "homepage": "https://github.com/dd3v/bookmarks#readme"
+  "homepage": "https://github.com/dd3v/favbox#readme"
 }
