--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@crxjs/vite-plugin": "^1.0.14",
+    "@crxjs/vite-plugin": "2.0.0-beta.13",
     "@headlessui/vue": "^1.7.11",
     "@heroicons/vue": "^2.0.16",
+    "@mozilla/readability": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@vueuse/core": "^9.13.0",
+    "dompurify": "^3.0.0",
     "jsstore": "^4.5.1",
     "linkedom": "^0.14.22",
     "notiwind": "^2.0.0",
