--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@crxjs/vite-plugin": "2.0.0-beta.13",
     "@headlessui/vue": "^1.7.11",
     "@heroicons/vue": "^2.0.16",
     "@mozilla/readability": "^0.4.2",
@@ -28,7 +27,9 @@
     "vue-next-masonry": "^1.1.3"
   },
   "devDependencies": {
+    "@crxjs/vite-plugin": "2.0.0-beta.13",
     "@rushstack/eslint-patch": "^1.2.0",
+    "@types/dompurify": "^2.4.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/test-utils": "^2.3.0",
     "autoprefixer": "^10.4.13",
