--- a/manifest.json
+++ b/manifest.json
@@ -2,25 +2,26 @@
   "manifest_version": 3,
   "name": "FavBox",
   "description": "Clear and modern bookmarking tool.",
-  "version": "1.2.0",
+  "version": "2.0.0",
   "permissions": ["bookmarks", "activeTab", "tabs", "storage"],
+  "icons": {
+    "16": "assets/icons/icon16.png",
+    "32": "assets/icons/icon32.png",
+    "48": "assets/icons/icon48.png",
+    "128": "assets/icons/icon128.png"
+  },
   "action": {
-    "default_popup": "src/ext/popup/index.html"
+    "default_popup": "ext/popup/index.html"
   },
   "background": {
-    "service_worker": "src/ext/background/index.js",
+    "service_worker": "ext/background/index.js",
     "type": "module"
   },
-  "icons": {
-    "16": "icons/icon32.png",
-    "32": "icons/icon32.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
-  },
+  "options_page": "ext/options/index.html",
   "content_scripts": [
     {
-      "matches": ["https://*/*"],
-      "js": ["src/ext/content/content.js"],
+      "matches": ["http://*/*", "https://*/*", "<all_urls>"],
+      "js": ["ext/content/content.js"],
       "run_at": "document_end"
     }
   ]
