--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,8 @@
   "commands": {
     "_execute_action": {
       "suggested_key": {
-        "default": "Ctrl+Shift+D",
-        "mac": "Ctrl+Shift+D"
+        "default": "Ctrl+Shift+E",
+        "mac": "Ctrl+Shift+E"
       }
     }
   },
