--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "vue-next-masonry": "^1.1.3"
   },
   "devDependencies": {
-    "@crxjs/vite-plugin": "2.0.0-beta.13",
+    "@crxjs/vite-plugin": "2.0.0-beta.15",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/dompurify": "^2.4.0",
     "@vitejs/plugin-vue": "^4.1.0",
@@ -41,6 +41,7 @@
     "eslint-plugin-vue": "^9.10.0",
     "jsdom": "^20.0.3",
     "postcss": "^8.4.21",
+    "terser": "^5.16.8",
     "vite": "^4.2.1",
     "vite-plugin-eslint": "^1.8.1",
     "vitest": "^0.25.8"
