captureVisibleTab as bookmark image fallback

--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,11 @@
   "manifest_version": 3,
   "name": "FavBox",
   "description": "Clear and modern bookmarking tool.",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "permissions": ["bookmarks", "activeTab", "tabs", "storage"],
+  "host_permissions": [
+    "<all_urls>"
+  ],
   "icons": {
     "16": "icons/icon16.png",
     "32": "icons/icon32.png",
