--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "jsdom": "^20.0.3",
     "postcss": "^8.4.31",
+    "sass": "^1.69.0",
     "terser": "^5.21.0",
     "vite": "^4.4.11",
     "vite-plugin-eslint": "^1.8.1",
