--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "tailwindcss": "^3.4.3",
     "v-lazy-image": "^2.1.1",
     "vue": "^3.4.26",
-    "vue-next-masonry": "^1.1.3"
+    "vue-next-masonry": "^1.1.3",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.19",
