pinned bookmarks (minimal setup)

--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
     "@mozilla/readability": "^0.4.4",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
+    "@tiptap/extension-bold": "^2.9.1",
+    "@tiptap/extension-highlight": "^2.9.1",
+    "@tiptap/extension-italic": "^2.9.1",
+    "@tiptap/extension-typography": "^2.9.1",
+    "@tiptap/extension-underline": "^2.9.1",
+    "@tiptap/pm": "^2.9.1",
+    "@tiptap/starter-kit": "^2.9.1",
+    "@tiptap/vue-3": "^2.9.1",
     "@vueuse/core": "^9.13.0",
     "@vueuse/motion": "^2.2.5",
     "dompurify": "^3.1.2",
