--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.21",
-    "@mozilla/readability": "^0.4.4",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "@tiptap/extension-bold": "^2.9.1",
@@ -25,7 +24,6 @@
     "@tiptap/vue-3": "^2.9.1",
     "@vueuse/core": "^9.13.0",
     "@vueuse/motion": "^2.2.5",
-    "dompurify": "^3.1.2",
     "jsstore": "^4.7.4",
     "linkedom": "^0.14.26",
     "notiwind": "^2.0.2",
@@ -36,6 +34,7 @@
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "2.0.0-beta.26",
+    "@iconify/json": "^2.2.267",
     "@rushstack/eslint-patch": "^1.10.2",
     "@types/dompurify": "^2.4.0",
     "@vitejs/plugin-vue": "^4.6.2",
@@ -51,6 +50,7 @@
     "jsdom": "^20.0.3",
     "postcss": "^8.4.38",
     "terser": "^5.31.0",
+    "unplugin-icons": "^0.20.0",
     "vite": "^4.5.3",
     "vite-plugin-eslint": "^1.8.1",
     "vitest": "^0.25.8"
