--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:firefox": "vite build --mode development -c vite.config.firefox.js",
     "build": "vite build",
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
@@ -50,10 +51,12 @@
     "jsdom": "^20.0.3",
     "postcss": "^8.4.38",
     "terser": "^5.31.0",
+    "unplugin-auto-import": "^0.18.3",
     "unplugin-icons": "^0.20.0",
     "vite": "^4.5.3",
     "vite-plugin-eslint": "^1.8.1",
-    "vitest": "^0.25.8"
+    "vitest": "^0.25.8",
+    "webextension-polyfill": "^0.12.0"
   },
   "repository": {
     "type": "git",
