added context menu to open popup

--- a/manifest.firefox.json
+++ b/manifest.firefox.json
@@ -8,7 +8,8 @@
         "activeTab",
         "tabs",
         "storage",
-        "alarms"
+        "alarms",
+        "contextMenus"
     ],
     "host_permissions": [
         "<all_urls>"
