--- a/manifest.chrome.json
+++ b/manifest.chrome.json
@@ -9,7 +9,8 @@
     "tabs",
     "storage",
     "alarms",
-    "contextMenus"
+    "contextMenus",
+    "offscreen"
   ],
   "host_permissions": [
     "<all_urls>"
@@ -40,11 +41,16 @@
   "web_accessible_resources": [
     {
       "resources": [
-        "ext/browser/index.html"
+        "ext/browser/index.html",
+        "ext/offscreen/index.html",
+        "ext/offscreen/index.js"
       ],
       "matches": [
         "<all_urls>"
       ]
     }
-  ]
+  ],
+  "content_security_policy": {
+    "extension_pages": "script-src 'self' 'wasm-unsafe-eval'"
+  }
 }
