--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.21",
+    "@sqlite.org/sqlite-wasm": "^3.47.2-build1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "@tiptap/extension-bold": "^2.9.1",
@@ -34,7 +35,7 @@
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
-    "@crxjs/vite-plugin": "2.0.0-beta.26",
+    "@crxjs/vite-plugin": "^2.0.0-beta.28",
     "@iconify/json": "^2.2.267",
     "@rushstack/eslint-patch": "^1.10.2",
     "@types/dompurify": "^2.4.0",
