--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "vite",
     "dev:firefox": "vite build --mode development -c vite.config.firefox.js",
     "build": "vite build",
-    "test:unit": "vitest --environment jsdom --root tests/unit",
-    "test:integration": "vitest --environment jsdom --root tests/integration",
+    "test:unit": "vitest --environment jsdom --root tests/unit --disableConsoleIntercept",
+    "test:integration": "vitest  --environment jsdom --root tests/integration --disableConsoleIntercept",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.1.1",
     "@headlessui/vue": "^1.7.21",
+    "@number-flow/vue": "^0.4.3",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "@tiptap/extension-bold": "^2.9.1",
@@ -25,6 +27,7 @@
     "@tiptap/vue-3": "^2.9.1",
     "@vueuse/core": "^9.13.0",
     "@vueuse/motion": "^2.2.5",
+    "floating-vue": "^5.2.2",
     "jsstore": "^4.7.4",
     "linkedom": "^0.14.26",
     "notiwind": "^2.0.2",
@@ -55,7 +58,7 @@
     "unplugin-icons": "^0.20.0",
     "vite": "^4.5.3",
     "vite-plugin-eslint": "^1.8.1",
-    "vitest": "^0.25.8",
+    "vitest": "^3.0.5",
     "webextension-polyfill": "^0.12.0"
   },
   "repository": {
