--- a/manifest.firefox.json
+++ b/manifest.firefox.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
     "name": "FavBox",
-    "description": "Clear and modern bookmarking tool.",
-    "version": "2.0.2",
+    "description": "A clean, modern bookmark app — local-first by design.",
+    "version": "2.0.3",
     "permissions": [
         "bookmarks",
         "activeTab",
