--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "favbox",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "private": false,
   "type": "module",
   "scripts": {
@@ -12,7 +12,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "@fontsource-variable/inter": "^5.1.1",
+    "@fontsource/sn-pro": "^5.2.5",
     "@headlessui/vue": "^1.7.21",
     "@number-flow/vue": "^0.4.3",
     "@tailwindcss/forms": "^0.5.7",
