chore(deps): minor version updates

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "favbox",
-  "version": "2.0.3",
+  "version": "2.0.4",
   "private": false,
   "type": "module",
   "scripts": {
@@ -15,8 +15,6 @@
     "@fontsource/sn-pro": "^5.2.5",
     "@headlessui/vue": "^1.7.21",
     "@number-flow/vue": "^0.4.3",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.13",
     "@tiptap/extension-bold": "^2.9.1",
     "@tiptap/extension-highlight": "^2.9.1",
     "@tiptap/extension-italic": "^2.9.1",
@@ -25,41 +23,44 @@
     "@tiptap/pm": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
     "@tiptap/vue-3": "^2.9.1",
-    "@vueuse/core": "^9.13.0",
+    "@vueuse/core": "^13.5.0",
     "@zanmato/vue3-treeselect": "^0.4.1",
     "floating-vue": "^5.2.2",
-    "jsstore": "^4.7.4",
-    "linkedom": "^0.14.26",
+    "jsstore": "^4.9.0",
     "notiwind": "^2.0.2",
-    "tailwindcss": "^3.4.3",
     "vue": "^3.5.13",
     "vue-next-masonry": "^1.1.3",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "webextension-polyfill": "^0.12.0",
+    "linkedom": "^0.18.11"
   },
   "devDependencies": {
-    "@crxjs/vite-plugin": "2.0.0-beta.26",
+    "@crxjs/vite-plugin": "^2.0.0-beta.26",
+    "@eslint/js": "^9.30.1",
     "@iconify/json": "^2.2.267",
     "@rushstack/eslint-patch": "^1.10.2",
-    "@types/dompurify": "^2.4.0",
-    "@vitejs/plugin-vue": "^4.6.2",
+    "@types/dompurify": "^3.0.5",
+    "@vitejs/plugin-vue": "^6.0.0",
     "@vue/test-utils": "^2.4.5",
-    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-tailwindcss": "^3.15.1",
-    "eslint-plugin-vue": "^9.25.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-tailwindcss": "^3.18.0",
+    "eslint-plugin-vue": "^10.3.0",
     "file-loader": "^6.2.0",
-    "jsdom": "^20.0.3",
+    "jsdom": "^26.1.0",
     "postcss": "^8.4.38",
     "terser": "^5.31.0",
-    "unplugin-auto-import": "^0.18.3",
-    "unplugin-icons": "^0.20.0",
-    "vite": "^4.5.3",
+    "unplugin-auto-import": "^19.3.0",
+    "unplugin-icons": "^22.1.0",
+    "vite": "^7.0.2",
     "vite-plugin-eslint": "^1.8.1",
     "vitest": "^3.0.5",
-    "webextension-polyfill": "^0.12.0"
+    "tailwindcss": "^3.4.17",
+    "autoprefixer": "^10.4.19",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13"
   },
   "repository": {
     "type": "git",
