--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "build": "vite build",
     "test:unit": "vitest --environment jsdom --root tests/unit --disableConsoleIntercept",
     "test:integration": "vitest  --environment jsdom --root tests/integration --disableConsoleIntercept",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix"
   },
   "dependencies": {
     "@fontsource/sn-pro": "^5.2.5",
     "@headlessui/vue": "^1.7.21",
     "@number-flow/vue": "^0.4.3",
+    "@tailwindcss/vite": "^4.1.11",
     "@tiptap/extension-bold": "^2.9.1",
     "@tiptap/extension-highlight": "^2.9.1",
     "@tiptap/extension-italic": "^2.9.1",
@@ -27,40 +28,42 @@
     "@zanmato/vue3-treeselect": "^0.4.1",
     "floating-vue": "^5.2.2",
     "jsstore": "^4.9.0",
+    "linkedom": "^0.18.11",
     "notiwind": "^2.0.2",
     "vue": "^3.5.13",
     "vue-next-masonry": "^1.1.3",
     "vue-router": "^4.5.0",
-    "webextension-polyfill": "^0.12.0",
-    "linkedom": "^0.18.11"
+    "webextension-polyfill": "^0.12.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.28.0",
     "@crxjs/vite-plugin": "^2.0.0-beta.26",
-    "@eslint/js": "^9.30.1",
-    "@iconify/json": "^2.2.267",
+    "@iconify/json": "^2.2.356",
     "@rushstack/eslint-patch": "^1.10.2",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
     "@types/dompurify": "^3.0.5",
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/test-utils": "^2.4.5",
-    "eslint": "^8.57.0",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.32.0",
-    "eslint-plugin-tailwindcss": "^3.18.0",
-    "eslint-plugin-vue": "^10.3.0",
+    "eslint-plugin-jsdoc": "^48.11.0",
+    "eslint-plugin-vue": "^9.33.0",
     "file-loader": "^6.2.0",
+    "globals": "^16.3.0",
     "jsdom": "^26.1.0",
-    "postcss": "^8.4.38",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "terser": "^5.31.0",
     "unplugin-auto-import": "^19.3.0",
     "unplugin-icons": "^22.1.0",
-    "vite": "^7.0.2",
+    "vite": "^7.0.3",
     "vite-plugin-eslint": "^1.8.1",
     "vitest": "^3.0.5",
-    "tailwindcss": "^3.4.17",
-    "autoprefixer": "^10.4.19",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.13"
+    "vue-eslint-parser": "^10.2.0"
   },
   "repository": {
     "type": "git",
