feat: date range filter

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@fontsource/sn-pro": "^5.2.5",
+    "@formkit/auto-animate": "^0.8.2",
     "@headlessui/vue": "^1.7.21",
     "@number-flow/vue": "^0.4.3",
     "@tailwindcss/vite": "^4.1.11",
@@ -24,11 +25,13 @@
     "@tiptap/pm": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
     "@tiptap/vue-3": "^2.9.1",
+    "@vuepic/vue-datepicker": "^11.0.2",
     "@vueuse/core": "^13.5.0",
     "@zanmato/vue3-treeselect": "^0.4.1",
     "floating-vue": "^5.2.2",
     "jsstore": "^4.9.0",
     "linkedom": "^0.18.11",
+    "node-vibrant": "^4.0.3",
     "notiwind": "^2.0.2",
     "vue": "^3.5.13",
     "vue-next-masonry": "^1.1.3",
